--- a/studio/.env.example
+++ b/studio/.env.example
@@ -2,3 +2,5 @@ SANITY_STUDIO_PROJECT_ID="<paste your project ID here>" # Required - The ID of y
 SANITY_STUDIO_DATASET="production" # Required - The dataset of your Sanity project
 SANITY_STUDIO_PREVIEW_URL="" #Optional - defaults to http://localhost:3000
 SANITY_STUDIO_STUDIO_HOST="" #Optional
+VIDEO_MIGRATION_TOKEN=""
+MEDIA_LIBRARY_ID=""
